RESOLVED FIXED200193
[JSC] Emit write barrier after storing instead of before storing
https://bugs.webkit.org/show_bug.cgi?id=200193
Summary [JSC] Emit write barrier after storing instead of before storing
Yusuke Suzuki
Reported 2019-07-27 00:14:04 PDT
[JSC] Emit write barrier *after* storing
Attachments
Patch (23.49 KB, patch)
2019-07-27 00:14 PDT, Yusuke Suzuki
no flags
Patch (23.58 KB, patch)
2019-07-27 00:35 PDT, Yusuke Suzuki
no flags
Archive of layout-test-results from ews115 for mac-highsierra (556.45 KB, application/zip)
2019-07-27 01:46 PDT, EWS Watchlist
no flags
Patch (23.55 KB, patch)
2019-07-27 02:55 PDT, Yusuke Suzuki
no flags
Patch (31.89 KB, patch)
2019-07-29 16:19 PDT, Yusuke Suzuki
no flags
Patch (32.29 KB, patch)
2019-07-29 16:53 PDT, Yusuke Suzuki
no flags
Patch (32.28 KB, patch)
2019-07-29 18:18 PDT, Yusuke Suzuki
saam: review+
Yusuke Suzuki
Comment 1 2019-07-27 00:14:12 PDT
Yusuke Suzuki
Comment 2 2019-07-27 00:35:48 PDT
EWS Watchlist
Comment 3 2019-07-27 01:46:15 PDT
Comment on attachment 375020 [details] Patch Attachment 375020 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/12820575 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 4 2019-07-27 01:46:16 PDT
Created attachment 375022 [details] Archive of layout-test-results from ews115 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-highsierra Platform: Mac OS X 10.13.6
Yusuke Suzuki
Comment 5 2019-07-27 02:55:39 PDT
Yusuke Suzuki
Comment 6 2019-07-29 11:00:41 PDT
Yusuke Suzuki
Comment 7 2019-07-29 16:19:35 PDT
Created attachment 375120 [details] Patch WIP
Yusuke Suzuki
Comment 8 2019-07-29 16:53:47 PDT
Yusuke Suzuki
Comment 9 2019-07-29 18:18:04 PDT
Saam Barati
Comment 10 2019-07-30 17:01:28 PDT
Comment on attachment 375133 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375133&action=review > Source/JavaScriptCore/ChangeLog:8 > + I reviewed tricky GC-related code including visitChildren and manual writeBarrier, and I found that we have several problems about write-barriers. about => with
Yusuke Suzuki
Comment 11 2019-07-30 18:23:45 PDT
Comment on attachment 375133 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=375133&action=review >> Source/JavaScriptCore/ChangeLog:8 >> + I reviewed tricky GC-related code including visitChildren and manual writeBarrier, and I found that we have several problems about write-barriers. > > about => with Fixed. Thanks!
Yusuke Suzuki
Comment 12 2019-07-30 18:35:44 PDT
Note You need to log in before you can comment on or make changes to this bug.